# notify-telegram-bot

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  config.json.tpl  docker-compose.yml  entrypoint.sh  mise.toml  pyproject.toml  renovate.json5
.github/workflows/: full-workflow.yaml  release-workflow.yaml
docs/: api-sofiatraffic.md  plan.md
k8s/: minimal_k8s.yaml
notify_bot/: __init__.py  config.py  db.py  main.py  middlewares.py  requirements.in  requirements.txt  run_bot.py  setup.py
notify_bot/handlers/: admin.py  common.py  enroll.py  eur.py  obligations.py
notify_bot/scheduler/: jobs.py
notify_bot/services/: bgtoll.py  boleron.py  cambiocuba.py  mvr.py  sofiatraffic.py
tests/: conftest.py  test_bgtoll.py  test_common.py  test_db.py  test_middlewares.py  test_mvr.py  test_sofiatraffic.py
