[build-system]
# https://setuptools.pypa.io/en/latest/build_meta.html
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
name = "notify_bot"
version = "0.1.0"
description = "Personal telegram Bot."
readme = "README.md"
authors = [{ name = "Daniel Ramirez", email = "dxas90@gmail.com" }]

requires-python = ">=3.9.0"

dependencies = [
  "anyio==4.9.0",
  "cachetools==5.5.2",
  "certifi==2025.4.26",
  "charset-normalizer==3.4.1",
  "h11==0.16.0",
  "h2==4.2.0",
  "hpack==4.1.0",
  "httpcore==1.0.9",
  "hyperframe==6.1.0",
  "idna==3.10",
  "python-telegram-bot==22.0",
  "requests==2.32.3",
  "rfc3986==2.0.0",
  "sniffio==1.3.1",
  "urllib3==2.4.0",
]

[project.optional-dependencies]
dev = ["black", "httpx", "pytest", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["notify_bot"]
exclude = ["tests"]

